[package]
name = "gcpdyndns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["from"] }
dirs = "6.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rstaples = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
gcp_auth = "0.12"
