[package]
name = "udyndns"
version = "0.1.1"
edition = "2024"

[dependencies]
addr = "0.15"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
gcp_auth = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rstaples = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = "s"
lto = true
